# blueprint-modular

./: .dockerignore  .env.example  .env.local.example  .eslintrc.json  .gitignore  BLOCKED.md  BLUEPRINT_MISSION.md  CHECKPOINT.md  COMMIT_DEPLOY.md  CURSOR_BPM.md  CURSOR_PROMPT_AI_STRATEGY.md  CURSOR_PROMPT_BLUEPRINT_AI.md  CURSOR_PROMPT_OLLAMA_MIGRATION.md  CURSOR_PROMPT_SANDBOX_AI_GENERATOR.md  DEPLOY.md  Dockerfile  INTEGRATION.md  PUBLISH_PYPI.md  README.md  SYNTHESE_RESTE_A_FAIRE.md  app.py  deploy.sh  deploy_blueprint_modular.ps1  docker-compose.yml  health-check.sh  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  sitemap.ts
backend/: README.md
bpm/: __init__.py  _doc_components.py  cli.py  integration-reference.md  manifest.json  ollama.py  server.py  setup.py
components/: AppLayoutClient.tsx  DocumentAnalysisImport.tsx  NotificationBell.css  NotificationBell.tsx  StartBuildingBlock.tsx  ThemeProvider.tsx
contexts/: AIHeaderContext.tsx  SidebarContext.tsx
deploy/: DEPLOY_APP.md  PERMISSIONS-403.md  README.md  app-env.example  concepts.html  deploy-from-git.sh  nginx-blueprint-modular.conf  nginx-streamlit.conf.example  nginx.conf  phase1-post-deploy.sh
docs/: ANALYSE_BLUEPRINT_MODULAR.md  APP_CONFIG.md  ASSET_MANAGER_AUDIT.md  ASSET_MANAGER_RESTE_A_FAIRE.md  AUDIT-RESPONSIVE.md  CDC_ASSET_MANAGER_COMPLEMENTS_ITSM.md  CRITERES_SORTIE_BPM.md  DESIGN_SYSTEM.md  MONITOR_AUDIT.md  REACTIVITE_GRANULAIRE.md  REGISTRY.md  (+4 more)
(+618 files in other folders)
